[gd_scene load_steps=8 format=3 uid="uid://b883t2xchs55o"]

[ext_resource type="Texture2D" uid="uid://bnonffx1sxuy6" path="res://assets/Planets/planet00.png" id="1_6yqjo"]
[ext_resource type="Script" path="res://planet.gd" id="1_srn2n"]
[ext_resource type="Texture2D" uid="uid://b1f5bbkwal3ta" path="res://assets/PNG/Damage/playerShip1_damage3.png" id="3_kricq"]
[ext_resource type="AudioStream" uid="uid://brle5ujis774g" path="res://assets/explosion.wav" id="4_1ohlf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rt8ci"]
radius = 33.0151

[sub_resource type="SpriteFrames" id="SpriteFrames_mvlmx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6yqjo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kricq")
}],
"loop": true,
"name": &"destroyed",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xogwy"]
bg_color = Color(0.627451, 0.239216, 0.235294, 0.737255)

[node name="Planet" type="Area2D" groups=["planets"]]
script = ExtResource("1_srn2n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rt8ci")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mvlmx")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -62.0
offset_top = -53.0
offset_right = 61.0
offset_bottom = -40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_xogwy")
value = 100.0
show_percentage = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1ohlf")

[connection signal="die" from="." to="." method="_on_die"]
[connection signal="has_take_damage" from="." to="." method="_on_has_take_damage"]
